--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "test:coverage": "nx test --coverage"
   },
   "private": true,
   "dependencies": {
